Bytt til felles httpklient i libs
